display templates ok, API connexion in progress

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -18,8 +18,8 @@
         <p class="members-hook">Déjà <span class="members-number"></span> membres</p>
 
         <div class="home-buttons">
-            <button type="submit" class="connexion-btn btn">CONNEXION</button>
-            <button type="submit" class="inscription-btn btn">INSCRIPTION</button>
+            <a class="connexion-btn btn" role="button" href="#connexion">CONNEXION</a>
+            <a class="inscription-btn btn" role="button" href="#inscription">INSCRIPTION</a>
         </div>
     </div>
 </div>
