--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,6 +34,10 @@ body .navbar-toggler {
     padding: 10px 15px;
 }
 
+body .btn, body .form-control {
+    width: auto;
+}
+
 /** PAGE ******************************************************************************************************************************/
 *{
     position: relative;
@@ -75,12 +79,13 @@ ul {
     list-style-type: none;
 }
 
-.main-content{
+body .main-content{
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     background: linear-gradient(transparent 20%, #1b1b1d 80%);
+    padding: 2% 20%;
 }
 
 
@@ -175,7 +180,6 @@ header .search-logout-item .logout-item {
     content: "";
     display: block;
 }
-
 
 /** HOME **************************************************************/
 
@@ -336,11 +340,4 @@ footer .footer-row .facebook-item, footer .footer-row .pinterest-item, footer .f
     header, .main-content, footer{
         padding: 0 20%;
     }
-
-    .accueil-content{
-        padding: 0 20% 10% 20%;
-    }
-
-
-
 }
