--- a/public/views/inscriptionForm.html
+++ b/public/views/inscriptionForm.html
@@ -3,7 +3,7 @@
         <h4 class="mb-3">Inscription</h4>
         <form id="inscription-form" class="needs-validation" novalidate>
             <div class="mb-3">
-                <label for="login">Login</label>
+                <label for="login">Login <span class="text-muted">*</span></label>
                 <input type="text" class="form-control" id="login" name="login" placeholder="Login" required>
                 <div class="invalid-feedback" style="width: 100%;">
                     Un pseudo est requis et doit être compris entre 3 et 18 caractères alphanumériques.
@@ -11,15 +11,15 @@
             </div>
 
             <div class="mb-3">
-                <label for="mail">Email <span class="text-muted">(Optional)</span></label>
-                <input type="email" class="form-control" id="mail" name="mail" placeholder="you@example.com">
+                <label for="mail">Email <span class="text-muted">*</span></label>
+                <input type="email" class="form-control" id="mail" name="mail" placeholder="you@example.com" required>
                 <div class="invalid-feedback">
                     Votre email n'est pas valide.
                 </div>
             </div>
 
             <div class="mb-3">
-                <label for="password" class="sr-only">Password</label>
+                <label for="password" class="sr-only">Password <span class="text-muted">*</span></label>
                 <input type="password" id="password" class="form-control" name="password"  placeholder="Password" required>
                 <div class="invalid-feedback">
                     Votre mot de passe doit avoir minimum 12 caractères, parmi les caractères spéciaux, les minuscules, les majuscules et les chiffres.
@@ -27,15 +27,16 @@
             </div>
 
             <div class="mb-3">
-                <label>Date of Birth</label>
+                <label>Date of Birth <span class="text-muted">*</span></label>
                 <input type="date" class="form-control" id="birth_date" name="birth_date" placeholder="Date of Birth" required>
             </div>
             <div class="invalid-feedback">
                 Votre date de naissance est requise.
             </div>
 
+            <button id="inscription-button" class="btn btn-primary btn-lg btn-block" type="submit">Inscription</button>
 
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Inscription</button>
+            <p class="obligatory-fields">Les champs avec une * sont obligatoires.</p>
         </form>
     </div>
 </div>
