--- a/public/views/home.html
+++ b/public/views/home.html
@@ -15,7 +15,7 @@
 
         <p class="last-lines"> au fil des jours !</p>
 
-        <p class="members-hook">Déjà <span class="members-number"></span> membres</p>
+        <p class="members-hook">Déjà <span class="members-number">284 056</span> membres</p>
 
         <div class="home-buttons">
             <a class="connexion-btn btn" role="button" href="#connexion">CONNEXION</a>
