--- a/public/views/movies.html
+++ b/public/views/movies.html
@@ -1,12 +1,14 @@
-<div class="movies-content">
+<div id="movies-content">
 
 </div>
 
-<div id = "page_navigation" type = "text/html"></div>
+<div id="page_navigation">
+
+</div>
 
     <!-- Pagination -->
     <!-- TO DO : convertir le jquery en js -->
-    < script >
+<script>
 var show_per_page = 3;
 var current_page = 0;
 
