--- a/public/views/movies.html
+++ b/public/views/movies.html
@@ -1,5 +1,64 @@
-<div id="movies-content">
+<div class="movies-content">
+    <div class="column column1">
+        <div class="main-hook">
+            <div class="first-hook">
+                <p class="best-week-movie-hook">Last week, the winner was :</p>
+                <p class="best-week-movie"></p>
+                <p class="all-votes"><span class="movie-votes"></span><span class="week-votes"></span></p>
+            </div>
 
+            <div class="second-hook">
+                <div class="lign1"></div>
+                <p class="first-lines-hook"><span class="bold-style">Votez pour votre film préféré,</span><br/>
+                    et découvrez le classement
+                </p>
+            </div>
+
+            <p class="last-lines"> au fil des jours !</p>
+
+            <p class="members-hook">Déjà <span class="members-number">284 056</span> votes</p>
+        </div>
+    </div>
+
+    <div class="column column2">
+        <div class="countdown-form">
+            <div class="column column1">
+                <div class="number-form">
+                    <p class="countdown-number">6</p>
+                </div>
+                <div class="number-form">
+                    <p class="countdown-number">6</p>
+                </div>
+                <p class="time-indication">jours</p>
+            </div>
+
+            <div class="column column2">
+                <div class="number-form">
+                    <p class="countdown-number">6</p>
+                </div>
+                <div class="number-form">
+                    <p class="countdown-number">6</p>
+                </div>
+                <p class="time-indication">heures</p>
+            </div>
+
+
+            <div class="column column3">
+                <div class="number-form">
+                    <p class="countdown-number">6</p>
+                </div>
+                <div class="number-form">
+                    <p class="countdown-number">6</p>
+                </div>
+                <p class="time-indication">minutes</p>
+            </div>
+
+        </div>
+    </div>
+    </div>
+
+    <div id="all-movies-items">
+    </div>
 </div>
 
 <div id="page_navigation">
