--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,12 +1,6 @@
 <div class="accueil-content">
     <div class="main-hook">
         <div class="first-hook">
-            <p class="best-week-movie-hook">Last week, the winner was :</p>
-            <p class="best-week-movie"></p>
-            <p class="all-votes"><span class="movie-votes"></span><span class="week-votes"></span></p>
-        </div>
-
-        <div class="second-hook">
             <div class="lign1"></div>
             <p class="first-lines-hook"><span class="bold-style">Votez pour votre film préféré,</span><br/>
                 et découvrez le classement
@@ -18,8 +12,8 @@
         <p class="members-hook">Déjà <span class="members-number">284 056</span> membres</p>
 
         <div class="home-buttons">
-            <a class="connexion-btn btn" role="button" href="#connexion">CONNEXION</a>
-            <a class="inscription-btn btn" role="button" href="#inscription">INSCRIPTION</a>
+            <a id="connexion-btn" class="btn" role="button" href="#connexion">CONNEXION</a>
+            <a id="inscription-btn" class="btn" role="button" href="#inscription">INSCRIPTION</a>
         </div>
     </div>
 </div>
