userConnected & templates in progress

--- a/public/views/inscriptionForm.html
+++ b/public/views/inscriptionForm.html
@@ -5,7 +5,7 @@
             <div class="mb-3">
                 <label for="login">Login <span class="text-muted">*</span></label>
                 <input type="text" class="form-control" id="login" name="login" placeholder="Login" required>
-                <div class="invalid-feedback" style="width: 100%;">
+                <div class="invalid-feedback">
                     Un pseudo est requis et doit être compris entre 3 et 18 caractères alphanumériques.
                 </div>
             </div>
