--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -255,10 +255,11 @@ p.members-hook{
 }
 
 .home-buttons{
-    display: flex;
+    display: none;
     flex-direction: column-reverse;
     min-width: 115px;
     width: 20%;
+    margin-left: 16px;
 }
 
 #connexion-btn, #inscription-btn{
@@ -321,12 +322,62 @@ p.members-hook{
     flex-direction: column;
 }
 
-.movies-content > .column {
-    width: 50%;
+.movies-hook{
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.movies-content .main-hook {
+.movies-hook > .column1 {
     width: 100%;
+    display: flex;
+    align-items: flex-end;
+    height: 200px;
+}
+
+.movies-hook .lines-hook{
+    font-weight: 200;
+    font-size: 150%;
+    margin-left: 16px;
+}
+
+.movies-hook .best-week-movie{
+
+}
+
+.movies-hook .members-hook{
+    font-size: 100%;
+}
+
+.movies-hook .members-number{
+    color: #f7b436;
+}
+
+.movies-hook > .column2 {
+    width: 50%;
+    padding: 5% 0;
+    z-index: 1;
+}
+
+.movies-hook > .column3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    width: 50%;
+    padding-right: 5%;
+}
+
+.best-week-movie-hook {
+    font-style: italic;
+    font-weight: 100;
+}
+
+.gold-form{
+    position: absolute;
+    width: 120%;
+    right: 0;
+    z-index: 0;
+    left: auto;
 }
 
 .countdown-form {
@@ -389,7 +440,7 @@ p.members-hook{
     position: absolute;
     top: 5%;
     background: white;
-    box-shadow: gray 2px 2px 6px;
+    box-shadow: rgb(80,80,80) 0px 1px 7px;
     z-index: 999;
     height: 40px;
     color: #1b1b1d;
@@ -397,6 +448,8 @@ p.members-hook{
     width: 20%;
     text-align: center;
     line-height: 40px;
+    font-weight: bold;
+    min-width: 32px;
 }
 
 .movie-poster {
@@ -428,7 +481,7 @@ p.members-hook{
 
 .movie-vote-button{
     position: absolute;
-    background: rgb(220,220,220);
+    background: rgb(240,240,240);
     right: 10%;
     left: auto;
     top: -17.5px;
@@ -438,10 +491,12 @@ p.members-hook{
     height: 35px;
     display: flex;
     justify-content: space-around;
+    min-width: 53px;
 }
 
 .vote-icon {
-    font-size: 150%;
+    height: 20px;
+    width: auto;
 }
 
     /** FOOTER **************************************************************/
