--- a/public/views/movies.html
+++ b/public/views/movies.html
@@ -1,116 +1,119 @@
 <div class="movies-content">
-    <div class="column column1">
-        <div class="main-hook">
-            <div class="first-hook">
-                <p class="best-week-movie-hook">Last week, the winner was :</p>
-                <p class="best-week-movie"></p>
-                <p class="all-votes"><span class="movie-votes"></span><span class="week-votes"></span></p>
-            </div>
+    <div class="movies-hook">
+        <div class="column column1">
+                <div class="first-hook">
+                    <p class="best-week-movie-hook">Last week, the winner was :</p>
+                    <p class="best-week-movie">INTERSTELLAR</p>
+                    <p class="all-votes"><span class="movie-votes">175 081</span>on 242 540 votes</p>
+                </div>
+        </div>
 
+        <div class="column column2">
             <div class="second-hook">
                 <div class="lign1"></div>
-                <p class="first-lines-hook"><span class="bold-style">Votez pour votre film préféré,</span><br/>
-                    et découvrez le classement
+                <p class="lines-hook">Votez pour votre film préféré,<br/>
+                    et découvrez le classement<br/>
+                    au fil des jours !
                 </p>
             </div>
 
-            <p class="last-lines"> au fil des jours !</p>
-
             <p class="members-hook">Déjà <span class="members-number">284 056</span> votes</p>
         </div>
-    </div>
 
-    <div class="column column2">
-        <div class="countdown-form">
-            <div class="column column1">
-                <div class="number-form">
-                    <p class="countdown-number">6</p>
+        <div class="column column3">
+            <img class="gold-form" src="/public/images/splash.png" alt="gold-form">
+
+            <div class="countdown-form">
+                <div class="column column1">
+                    <div class="number-form">
+                        <p class="countdown-number">6</p>
+                    </div>
+                    <div class="number-form">
+                        <p class="countdown-number">6</p>
+                    </div>
+                    <p class="time-indication">jours</p>
                 </div>
-                <div class="number-form">
-                    <p class="countdown-number">6</p>
+
+                <div class="column column2">
+                    <div class="number-form">
+                        <p class="countdown-number">6</p>
+                    </div>
+                    <div class="number-form">
+                        <p class="countdown-number">6</p>
+                    </div>
+                    <p class="time-indication">heures</p>
                 </div>
-                <p class="time-indication">jours</p>
+
+
+                <div class="column column3">
+                    <div class="number-form">
+                        <p class="countdown-number">6</p>
+                    </div>
+                    <div class="number-form">
+                        <p class="countdown-number">6</p>
+                    </div>
+                    <p class="time-indication">minutes</p>
+                </div>
+
             </div>
-
-            <div class="column column2">
-                <div class="number-form">
-                    <p class="countdown-number">6</p>
-                </div>
-                <div class="number-form">
-                    <p class="countdown-number">6</p>
-                </div>
-                <p class="time-indication">heures</p>
-            </div>
-
-
-            <div class="column column3">
-                <div class="number-form">
-                    <p class="countdown-number">6</p>
-                </div>
-                <div class="number-form">
-                    <p class="countdown-number">6</p>
-                </div>
-                <p class="time-indication">minutes</p>
-            </div>
-
         </div>
-    </div>
     </div>
 
     <div id="all-movies-items">
     </div>
-</div>
 
-<div id="page_navigation">
 
-</div>
+    <div id="page_navigation">
+
+    </div>
 
     <!-- Pagination -->
     <!-- TO DO : convertir le jquery en js -->
-<script>
-var show_per_page = 3;
-var current_page = 0;
+    <script>
+    var show_per_page = 3;
+    var current_page = 0;
 
-function set_display(first, last) {
-    document.querySelector('#content').childNodes.css('display', 'none');
-    document.querySelector('#content').childNodes.slice(first, last).css('display', 'block');
-}
-
-function previous() {
-    if (document.querySelector('.active').prev('.page_link').length) go_to_page(current_page - 1);
-}
-
-function next() {
-    if (document.querySelector('.active').next('.page_link').length) go_to_page(current_page + 1);
-}
-
-function go_to_page(page_num) {
-    current_page = page_num;
-    start_from = current_page * show_per_page;
-    end_on = start_from + show_per_page;
-    set_display(start_from, end_on);
-    document.querySelector('.active').classList.remove('active');
-    document.querySelector('#id' + page_num).classList.add('active');
-}
-
-document.querySelector(document).ready(function () {
-
-    var number_of_pages = Math.ceil(document.querySelector('#content').childNodes.length / show_per_page);
-
-    var nav = '<ul class="pagination"><li><a href="javascript:previous();">&laquo;</a>';
-
-    var i = -1;
-    while (number_of_pages > ++i) {
-        nav += '<li class="page_link'
-        if (!i) nav += ' active';
-        nav += '" id="id' + i + '">';
-        nav += '<a href="javascript:go_to_page(' + i + ')">' + (i + 1) + '</a>';
+    function set_display(first, last) {
+        document.querySelector('#content').childNodes.css('display', 'none');
+        document.querySelector('#content').childNodes.slice(first, last).css('display', 'block');
     }
-    nav += '<li><a href="javascript:next();">&raquo;</a></ul>';
 
-    document.querySelector('#page_navigation').html(nav);
-    set_display(0, show_per_page);
+    function previous() {
+        if (document.querySelector('.active').prev('.page_link').length) go_to_page(current_page - 1);
+    }
 
-});
+    function next() {
+        if (document.querySelector('.active').next('.page_link').length) go_to_page(current_page + 1);
+    }
 
-</script >
+    function go_to_page(page_num) {
+        current_page = page_num;
+        start_from = current_page * show_per_page;
+        end_on = start_from + show_per_page;
+        set_display(start_from, end_on);
+        document.querySelector('.active').classList.remove('active');
+        document.querySelector('#id' + page_num).classList.add('active');
+    }
+
+    document.querySelector(document).ready(function () {
+
+        var number_of_pages = Math.ceil(document.querySelector('#content').childNodes.length / show_per_page);
+
+        var nav = '<ul class="pagination"><li><a href="javascript:previous();">&laquo;</a>';
+
+        var i = -1;
+        while (number_of_pages > ++i) {
+            nav += '<li class="page_link'
+            if (!i) nav += ' active';
+            nav += '" id="id' + i + '">';
+            nav += '<a href="javascript:go_to_page(' + i + ')">' + (i + 1) + '</a>';
+        }
+        nav += '<li><a href="javascript:next();">&raquo;</a></ul>';
+
+        document.querySelector('#page_navigation').html(nav);
+        set_display(0, show_per_page);
+
+    });
+
+    </script >
+</div>
