--- a/public/views/inscription.html
+++ b/public/views/inscription.html
@@ -1,7 +1,7 @@
-<div class="row">
+<div id="form-content" class="row">
     <div class="col-md-8 order-md-1">
         <h4 class="mb-3">Inscription</h4>
-        <form id="inscription-form" class="needs-validation" novalidate>
+        <form id="inscription-form" class="needs-validation">
             <div class="mb-3">
                 <label for="login">Login <span class="text-muted">*</span></label>
                 <input type="text" class="form-control" id="login" name="login" placeholder="Login" required>
