--- a/public/views/home.html
+++ b/public/views/home.html
@@ -11,7 +11,7 @@
 
         <p class="members-hook">Déjà <span class="members-number">284 056</span> membres</p>
 
-        <div class="home-buttons">
+        <div id="home-buttons">
             <a id="connexion-btn" class="btn" role="button" href="#connexion">CONNEXION</a>
             <a id="inscription-btn" class="btn" role="button" href="#inscription">INSCRIPTION</a>
         </div>
