--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,11 +35,24 @@ body .navbar-toggler {
 }
 
 body .btn, body .form-control {
-    width: auto;
+    width: 100%;
 }
 
 label .text-muted {
     color: white !important;
+}
+
+body label {
+    margin-bottom: .25rem;
+}
+
+body .invalid-feedback {
+    margin-bottom: .5rem;
+    font-weight: 400;
+    background: rgba(220,220,220,0.6);
+    border-radius: 7px;
+    font-size: 90%;
+    padding: 8px;
 }
 
 /** PAGE ******************************************************************************************************************************/
@@ -139,22 +152,6 @@ header, .main-content, footer{
 
 .movies-item, .historical-item {
     display: none;
-}
-
-#error-content, #signInValidation-popup{
-    display: flex;
-    flex-direction: column;
-    background: rgba(255,255,255,0.2);
-    border-radius: 10%;
-    padding: 10%;
-}
-
-.error-image, .validation-image {
-    display: block;
-    width: 40%;
-    filter: invert(100%);
-    margin: 10% 0;
-    align-self: center;
 }
 
     /** HEADER ****************************************************************/
@@ -314,19 +311,56 @@ p.members-hook{
     margin-top: 8px;
 }
 
-    /** VALIDATION **************************************************************/
-
-
-
-#signInValidation-popup {
+    /** FEEDBACK **************************************************************/
+#popup-container {
     display: none;
     opacity: 0;
     transition: opacity 1s linear 0.5s;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: transparent;
+    justify-content: center;
+    align-items: center;
 }
 
+#feedback-popup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: rgba(247,80,80,0.8);
+    border-radius: 10%;
+    padding: 10%;
+    width: 66%;
+    height: 50%;
+}
 
+.feedback-text {
+    font-weight: 400;
+    font-size: 120%;
+    color: white;
+}
 
+.feedback-image {
+    display: block;
+    width: 40%;
+    filter: invert(100%);
+    margin: 10% 0;
+    align-self: center;
+}
 
+#feedback-popup  .fa-times {
+    align-self: flex-end;
+    position: absolute;
+    right: 10%;
+    left: auto;
+    top: 10%;
+}
+
+#feedback-popup  .fa-times:hover {
+    background: black;
+}
 
     /** MOVIES **************************************************************/
 .movies-content{
@@ -404,17 +438,13 @@ p.members-hook{
     width: 25%;
 }
 
-.number-form {
-    background: rgba(200,200,200,0.5);
-    border-radius: 5px;
-    width: 45%;
-}
-
 .countdown-number {
     font-size: 200%;
     color: #1b1b1d;
-    width: 100%;
     text-align: center;
+    background: rgba(200,200,200,0.5);
+    border-radius: 5px;
+    width: 45%;
 }
 
 .time-indication {
@@ -628,6 +658,10 @@ footer .footer-row .facebook-item, footer .footer-row .pinterest-item, footer .f
     body{
         background-size: 100% auto;
 
+    }
+
+    body .btn, body .form-control {
+        width: auto;
     }
 }
 
