--- a/public/views/connexion.html
+++ b/public/views/connexion.html
@@ -1,19 +1,24 @@
 <div id="form-content" class="row">
     <div class="col-md-8 order-md-1">
         <h4 class="mb-3">Connexion</h4>
-        <form id="connexion-form" class="needs-validation">
+        <form method="POST" id="connexion-form" class="needs-validation">
             <div class="mb-3">
-                <label for="mail" class="sr-only">Mail <span class="text-muted">*</span></label>
-                <input type="email" class="form-control" id="mail" name="mail" placeholder="Mail" required autofocus>
+                <label for="mail">Mail</label>
+
+                <div id="invalid-email-login-feedback" class="invalid-feedback">
+                    Votre email n'est pas au bon format.
+                </div>
+
+                <input type="email" class="form-control" id="mail" name="mail" placeholder="Mail" onsubmit="validateMail()" autofocus>
             </div>
 
             <div class="mb-3">
-                <label for="password" class="sr-only">Password <span class="text-muted">*</span></label>
-                <input type="password" id="password" class="form-control" name="password"  placeholder="Password" required>
+                <label for="password">Password</label>
+                <input type="password" id="password" class="form-control" name="password"  placeholder="Password" >
             </div>
 
-            <div class="invalid-feedback">
-                Votre email ou votre mot de passe est erroné.
+            <div id="invalid-empty-feedback" class="invalid-feedback">
+                Certains champs requis sont vides.
             </div>
 
             <button id="connexion-button" class="btn btn-primary btn-lg btn-block" type="submit">Connexion</button>
